# ewah_benchmark

./: .gitignore  README.md
benchmark/Debug/test/: ewah_test
benchmark/Release/test/: ewah_test
benchmark/include/util/: JavaEWAHReader.hpp
benchmark/test/: CMakeLists.txt  ewah_test.cc  ewah_test_and.cc  ewah_test_iterator.cc  ewah_test_iterator_access_sum.cc  ewah_test_or.cc
java_benchmark/: pom.xml
java_benchmark/src/main/java/murex/pop/ewah/benchmark/: AndBenchmark.java  BitmapBenchmarks.java  BitmapExtractor.java  EWAHBenchmarks.java  IteratorAccessSumBenchmark.java  IteratorBenchmark.java  OrBenchmark.java
java_benchmark/src/test/java/murex/pop/ewah/benchmark/: BitmapExtractorTest.java
